# flash_attention_simple

./: CMakeLists.txt  README.md  flash_attention_v2.cu  main.cpp
